<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.vaporwarecorp.popularmovies.util.ViewUtil" />

        <variable
            name="favorite"
            type="boolean" />

        <variable
            name="movie"
            type="com.vaporwarecorp.popularmovies.model.Movie" />

        <variable
            name="videos"
            type="java.util.ArrayList&lt;com.vaporwarecorp.popularmovies.model.Video>" />

        <variable
            name="reviews"
            type="java.util.ArrayList&lt;com.vaporwarecorp.popularmovies.model.Review>" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/backdropDetailsStyle"
                        android:contentDescription="@string/backdrop"
                        app:backdropPath="@{movie.backdropPath}" />

                    <View style="@style/imageGradientStyle" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="72dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@null"
                            android:scaleType="fitXY"
                            android:src="@drawable/backdrop_button" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/play_button"
                            style="@style/playButtonStyle"
                            android:visibility="@{videos.size() > 0 ? View.VISIBLE : View.GONE}" />

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp">

                        <ImageView
                            android:id="@+id/poster"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/poster"
                            android:scaleType="fitXY"
                            android:src="@drawable/poster_placeholder"
                            app:posterPath="@{movie.posterPath}" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:orientation="vertical">

                            <TextView
                                style="@style/titleTextStyle"
                                android:text="@{movie.originalTitle}" />

                            <TextView
                                style="@style/releaseDateTextStyle"
                                android:text="@{ViewUtil.formatDate(movie.releaseDate)}" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/content_margin_start"
                                android:layout_marginTop="@dimen/content_margin_end">

                                <com.vaporwarecorp.popularmovies.widget.MarkView
                                    style="@style/markViewStyle"
                                    app:mv_mark="@{movie.voteAverage}"
                                    app:mv_textSize="@dimen/abc_text_size_title_material" />

                                <TextView
                                    style="@style/ratingTextStyle"
                                    android:text="@{@string/vote_count(movie.voteCount)}" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        style="@style/movieDetailsTitleStyle"
                        android:text="@string/storyline" />

                    <TextView
                        android:id="@+id/overview_text"
                        style="@style/movieDetailsTextStyle"
                        android:text="@{movie.overview}" />

                    <TextView
                        style="@style/movieDetailsTitleStyle"
                        android:text="@string/videos"
                        android:visibility="@{videos.size() > 0 ? View.VISIBLE : View.GONE}" />

                    <com.vaporwarecorp.popularmovies.widget.AutofitGridView
                        android:id="@+id/videos_view"
                        style="@style/videosViewStyle"
                        android:visibility="@{videos.size() > 0 ? View.VISIBLE : View.GONE}" />

                    <TextView
                        style="@style/movieDetailsTitleStyle"
                        android:text="@string/reviews"
                        android:visibility="@{reviews.size() > 0 ? View.VISIBLE : View.GONE}" />

                    <com.vaporwarecorp.popularmovies.widget.AutofitListView
                        android:id="@+id/reviews_view"
                        style="@style/reviewsViewStyle"
                        android:visibility="@{reviews.size() > 0 ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

            </FrameLayout>

        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_favorite"
            style="@style/favoriteButtonStyle"
            android:src="@drawable/ic_star_black_24dp"
            android:visibility="@{!favorite ? View.VISIBLE : View.GONE}"
            app:backgroundTint="@color/primary_material_light"
            app:rippleColor="@color/md_yellow_700" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/remove_favorite"
            style="@style/favoriteButtonStyle"
            android:src="@drawable/ic_star_white_24dp"
            android:visibility="@{favorite ? View.VISIBLE : View.GONE}"
            app:backgroundTint="@color/md_yellow_700"
            app:rippleColor="@color/primary_material_light" />

    </android.support.design.widget.CoordinatorLayout>

</layout>